--- a/scanflask/templates/results.html
+++ b/scanflask/templates/results.html
@@ -17,6 +17,7 @@
           <thead>
             <tr>
               <th>IP</th>
+              <th>Hostname</th>
               <th>OS</th>
               <th>22</th>
               <th>80</th>
@@ -27,6 +28,7 @@
             {% for scan in scans %}
               <tr>
                 <td>{{ scan['ip'] }}</td>
+                <td>{{ scan['hostname'] }}</td>
                 <td>{{ scan['os'] }}</td>
                 <td>{{ scan['ports'][22] }}</td>
                 <td>{{ scan['ports'][80] }}</td>
