Removed headings from templates.

--- a/scanflask/templates/sidebar.html
+++ b/scanflask/templates/sidebar.html
@@ -24,8 +24,8 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand"><a href="#">ScanFlask</a></li>
-          <li><a href="#">New Scan</a></li>
-          <li><a href="#">Results</a></li>
+          <li><a href="/scan">New Scan</a></li>
+          <li><a href="/results">Results</a></li>
           <li><a href="#">Settings</a></li>
         </ul>
       </div>
